--- a/carrito.html
+++ b/carrito.html
@@ -192,7 +192,14 @@
         <table id="carrito-table"></table>
         <div id="total-container">
             <p>Total: $<span id="total-precio">0.00</span></p>
-            <button id="comprar-btn" onclick="realizarCompra()">Comprar</button>
+            <!-- Stripe -->
+            <script async src="https://js.stripe.com/v3/buy-button.js">
+            </script>
+
+            <stripe-buy-button buy-button-id="buy_btn_1OGrEoFRT6NzCn7QtwsAMk46"
+                publishable-key="pk_test_51OGoVKFRT6NzCn7QmatQ3iGjFJjNhdmfHtY1AUj1Agw2luAJsFgR3GorSvaM4dBjg3GIVCcL2418zdbqesmvyXWN00jBnLGooI">
+            </stripe-buy-button>
+            <!-- End of Stripe -->
         </div>
     </div>
 
@@ -314,66 +321,66 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-   <!-- Footer Contact-->
-   <div class="divider"></div>
-   <div class="container">
-       <footer class="py-5">
-           <div class="row">
-               <div class="col-6 col-md-2 mb-3">
-                   <h5>Links</h5>
-                   <ul class="nav flex-column">
-                       <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Inicio</a>
-                       </li>
-                       <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Productos</a>
-                       </li>
-                       <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Lista de
-                               Deseos</a>
-                       </li>
-                       <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Carrito</a>
-                       </li>
-                       <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Perfil</a>
-                       </li>
-                   </ul>
-               </div>
+    <!-- Footer Contact-->
+    <div class="divider"></div>
+    <div class="container">
+        <footer class="py-5">
+            <div class="row">
+                <div class="col-6 col-md-2 mb-3">
+                    <h5>Links</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Inicio</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Productos</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Lista de
+                                Deseos</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Carrito</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Perfil</a>
+                        </li>
+                    </ul>
+                </div>
 
-               <div class="col-6 col-md-2 mb-3">
-                   <h5>Sobre FiesTop</h5>
-                   <ul class="nav flex-column">
-                       <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Quiénes
-                               somos</a></li>
-                       <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                   </ul>
-               </div>
+                <div class="col-6 col-md-2 mb-3">
+                    <h5>Sobre FiesTop</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Quiénes
+                                somos</a></li>
+                        <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-body-secondary">FAQs</a>
+                        </li>
+                    </ul>
+                </div>
 
-               <div class="col-md-5 offset-md-1 mb-3">
-                   <form>
-                       <h5>¿Quieres contactarnos?</h5>
-                       <p>Escribe tu correo y nos pondremos en contacto contigo cuanto antes :)</p>
-                       <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                           <label for="newsletter1" class="visually-hidden">Correo electrónico</label>
-                           <input id="newsletter1" type="text" class="form-control"
-                               placeholder="Correo electrónico">
-                           <button class="btn btn-primary" type="button">Enviar</button>
-                       </div>
-                   </form>
-               </div>
-           </div>
+                <div class="col-md-5 offset-md-1 mb-3">
+                    <form>
+                        <h5>¿Quieres contactarnos?</h5>
+                        <p>Escribe tu correo y nos pondremos en contacto contigo cuanto antes :)</p>
+                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                            <label for="newsletter1" class="visually-hidden">Correo electrónico</label>
+                            <input id="newsletter1" type="text" class="form-control" placeholder="Correo electrónico">
+                            <button class="btn btn-primary" type="button">Enviar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
 
-           <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-               <p>© 2023 FiesTop. Todos los derechos reservados.</p>
-               <ul class="list-unstyled d-flex">
-                   <li class="ms-3"><a class="link-body-emphasis"
-                           href="https://www.facebook.com/people/FiesTop/100092594490737/"
-                           alt="Plataforma oficial de FiesTop en Facebook">
-                           <i class="bi bi-facebook" style="font-size: 1.5rem;"></i></a></li>
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                <p>© 2023 FiesTop. Todos los derechos reservados.</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a class="link-body-emphasis"
+                            href="https://www.facebook.com/people/FiesTop/100092594490737/"
+                            alt="Plataforma oficial de FiesTop en Facebook">
+                            <i class="bi bi-facebook" style="font-size: 1.5rem;"></i></a></li>
 
-                   <li class="ms-3">
-                       <p>Tel. 449 123 4567</p>
-                   </li>
-               </ul>
-           </div>
-       </footer>
-   </div>
+                    <li class="ms-3">
+                        <p>Tel. 449 123 4567</p>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 
 </body>
 
