--- a/product2.html
+++ b/product2.html
@@ -27,6 +27,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
   <style>
+    .navbar {
+      position: fixed;
+      width: 100%;
+      z-index: 1000000;
+      top: 0;
+    }
+    
     #producto {
       display: flex;
       flex-direction: row;
@@ -98,28 +105,73 @@
 
 <header>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="img/Fisestoplogo.png" height="40px"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Catalogo.html">Todos los productos</a>
-          </li>
-        </ul>
-        <form class="d-flex" action="Resultados.html" method="GET">
-          <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search"
-              name="query">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
-      </form>
+      <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"><img src="img/Fisestoplogo.png" height="40px"
+                  alt="Logo oficial de FiesTop" title="Logo oficial de FiesTop"> </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+              aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="Catalogo.html">Todos los productos</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                          aria-expanded="false">
+                          Quienes somos:
+                      </a>
+                      <ul class="dropdown-menu">
+                          <li><a class="dropdown-item">FiesTop es una empresa centrada en la organizacion de
+                                  eventos sociales <br> de cualquier indole desde fiestas de cumpleaños hasta
+                                  fiestas de XV años y bodas <br> el limite es su imaginación, nosotros le daremos
+                                  las herramientas necesarias <br> para que organice su fiesta ideal en tiempo y
+                                  forma</a></li>
+                          <li><a class="dropdown-item" href="#"></a></li>
+                          <li>
+                              <hr class="dropdown-divider">
+                          </li>
+                          <li><a class="dropdown-item" href="#"></a></li>
+                      </ul>
+                  </li>
+
+                  <!-- Carrito -->
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
+                  </li>
+
+                  <!-- Lista de deseos -->
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="wishlist.html">Lista de deseos</a>
+                  </li>
+
+              </ul>
+
+              <form class="d-flex" action="Resultados.html" method="GET">
+                  <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search"
+                      name="query">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+              </form>
+
+              <!-- Sección de inicio de sesión -->
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link" href="Login.html">Iniciar sesión</a>
+                  </li>
+              </ul>
+
+              <!-- Sección para ver el perfil del usuario (puedes ajustar el enlace según tus necesidades) -->
+              <a class="navbar-brand" href="Login.html">
+                  <img src="img/LogoU.png" height="40px" alt="Logo oficial de FiesTop" title="Perfil de usuario">
+              </a>
+
+          </div>
       </div>
-    </div>
   </nav>
 </header>
 
