--- a/index.html
+++ b/index.html
@@ -201,21 +201,21 @@
         }
 
         .btnproducto {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #4CAF50;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
 
-.btnproducto:hover {
-    background-color: #45a049;
-}
+        .btnproducto:hover {
+            background-color: #45a049;
+        }
 
 
         /**/
@@ -587,7 +587,8 @@
                         <ul class="nav flex-column">
                             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Quiénes
                                     somos</a></li>
-                            <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-body-secondary">Preguntas Frecuentes</a></li>
+                            <li class="nav-item mb-2"><a href="FAQs.html"
+                                    class="nav-link p-0 text-body-secondary">Preguntas Frecuentes</a></li>
                         </ul>
                     </div>
 
