--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
         .card .boton-imagen:hover,
         .card .boton-imagen-wishlist:hover {
             transform: scale(1.2);
+            background-color: #45a049;
         }
 
         .card .boton-imagen:active,
