--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
                 }
 
                 cargarProductos();
-                // console.log(carrito);
-                // localStorage.removeItem('carrito');
+                // console.log(wishlist);
+                // localStorage.removeItem('wishlist');
 
             </script>
 
