Update Carrito Wishlist
Botones carrito y wishlist

--- a/product2.html
+++ b/product2.html
@@ -190,9 +190,9 @@
         <p id="product-colors"></p>
         <p id="product-materials"></p>
         <p id="product-brand"></p>
-        <button type="button" class="btn btn-primary" onclick="agregarAlCarrito()">Agregar al carrito</button>
+        <button type="button" class="btn btn-primary" onclick="agregarAlCarrito()" style="background-color: #4CAF50;">Agregar al carrito</button>
         <br>
-        <button type="button" class="btn btn-primary" onclick="agregarListaDeDeseos()">Agregar a lista de deseos</button>
+        <button type="button" class="btn btn-primary" onclick="agregarListaDeDeseos()" style="background-color: #4CAF50;">Agregar a lista de deseos</button>
         <br>
 
         <!-- Stripe -->
@@ -232,8 +232,8 @@
         <label for="comment">Comentario:</label><br>
         <textarea id="comment" rows="4" cols="100" required></textarea><br>
 
-        <button type="button" onclick="addComment()">Agregar Comentario</button>
-        <button type="button" onclick="clearComments()">Limpiar Comentarios</button>
+        <button type="button" class="btn btn-primary" onclick="addComment()" style="background-color: #4CAF50;">Agregar Comentario</button>
+        <button type="button" class="btn btn-primary" onclick="clearComments()" style="background-color: #4CAF50;">Limpiar Comentarios</button>
       </form>
 
       <!-- Lista de comentarios -->
