--- a/product.html
+++ b/product.html
@@ -100,6 +100,7 @@
       border-width: 1px 0;
       box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
     }
+
   </style>
 </head>
 
@@ -187,9 +188,9 @@
         <p id="product-colors"></p>
         <p id="product-materials"></p>
         <p id="product-brand"></p>
-        <button type="button" class="btn btn-primary" onclick="agregarAlCarrito()">Agregar al carrito</button>
+        <button type="button" class="btn btn-primary" onclick="agregarAlCarrito()" style="background-color: #4CAF50;">Agregar al carrito</button>
         <br>
-        <button type="button" class="btn btn-primary" onclick="agregarListaDeDeseos()">Agregar a lista de deseos</button>
+        <button type="button" class="btn btn-primary" onclick="agregarListaDeDeseos()" style="background-color: #4CAF50;">Agregar a lista de deseos</button>
         <br>
 
 
@@ -230,8 +231,8 @@
         <label for="comment">Comentario:</label><br>
         <textarea id="comment" rows="4" cols="100" required></textarea><br>
 
-        <button type="button" onclick="addComment()">Agregar Comentario</button>
-        <button type="button" onclick="clearComments()">Limpiar Comentarios</button>
+        <button type="button" class="btn btn-primary" onclick="addComment()" style="background-color: #4CAF50;">Agregar Comentario</button>
+        <button type="button" class="btn btn-primary" onclick="clearComments()" style="background-color: #4CAF50;">Limpiar Comentarios</button>
       </form>
 
       <!-- Lista de comentarios -->
