Texto del boton RegU

--- a/RegU.html
+++ b/RegU.html
@@ -122,7 +122,7 @@
         <label for="numeroInterior">Número Interior:</label>
         <input type="text" id="numeroInterior">
 
-        <button type="button" onclick="registrarUsuario()">Registrarse</button>
+        <button type="button" onclick="registrarUsuario()">Aceptar</button>
     </form>
 
     <table id="usuariosTable">
