Corrección de la descripción
Ya aparece la descripción del producto

--- a/Resultados.html
+++ b/Resultados.html
@@ -324,7 +324,7 @@
                     productoElement.innerHTML = `
                         <img src="${producto.imagen}" alt="${producto.nombre}">
                         <h3>${producto.nombre}</h3>
-                        <p>${producto.descripcion}</p>
+                        <p>${producto.descripcion_larga}</p>
                         <p>Precio: $${producto.precio}</p>
                         `;
 
