Cambio sección busqueda
Ya direcciona al producto correspondiente

--- a/Resultados.html
+++ b/Resultados.html
@@ -331,7 +331,7 @@
                     // Agregar un manejador de eventos al elemento del producto
                     productoElement.addEventListener('click', function () {
                         // Redirigir a product.html cuando se selecciona un producto
-                        window.location.href = 'product.html';
+                        window.location.href = (producto.enlace);
                     });
 
                     // Agregar cada producto al contenedor de filas
