--- a/index.html
+++ b/index.html
@@ -541,7 +541,9 @@
                 }
 
                 cargarProductos();
+                // console.log(carrito);
                 // console.log(wishlist);
+                // localStorage.removeItem('carrito');
                 // localStorage.removeItem('wishlist');
 
             </script>
