--- a/wishlist.html
+++ b/wishlist.html
@@ -231,7 +231,7 @@
                     wishlistCard.classList.add('wishlist-card');
 
                     var enlaceImagen = document.createElement('a');
-                    enlaceImagen.href = 'product.html';
+                    enlaceImagen.href = producto.enlace;
                     var imagen = document.createElement('img');
                     imagen.src = producto.imagen;
                     imagen.alt = producto.nombre;
