--- a/Resultados.html
+++ b/Resultados.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultados de Búsqueda - FiesTop</title>
-    <!-- Agrega tus estilos y enlaces a Bootstrap u otros recursos aquí si es necesario -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
     <!-- Estilo de la página -->
     <style>
@@ -47,7 +50,6 @@
             width: 200px;
             margin-right: 10px;
         }
-
 
         #resultados-container {
             flex: 1;
@@ -91,7 +93,7 @@
             z-index: 1000000;
             top: 0;
         }
-        
+
         .divider {
             width: 100%;
             height: 1.5rem;
@@ -203,67 +205,7 @@
         <div id="resultados-container"></div>
     </div>
 
-    <!-- Footer Contact-->
-  <div class="divider"></div>
-  <div class="container">
-      <footer class="py-5">
-          <div class="row">
-              <div class="col-6 col-md-2 mb-3">
-                  <h5>Links</h5>
-                  <ul class="nav flex-column">
-                      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Inicio</a>
-                      </li>
-                      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Productos</a>
-                      </li>
-                      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Lista de
-                              Deseos</a>
-                      </li>
-                      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Carrito</a>
-                      </li>
-                      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Perfil</a>
-                      </li>
-                  </ul>
-              </div>
-
-              <div class="col-6 col-md-2 mb-3">
-                  <h5>Sobre FiesTop</h5>
-                  <ul class="nav flex-column">
-                      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Quiénes
-                              somos</a></li>
-                      <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                  </ul>
-              </div>
-
-              <div class="col-md-5 offset-md-1 mb-3">
-                  <form>
-                      <h5>¿Quieres contactarnos?</h5>
-                      <p>Escribe tu correo y nos pondremos en contacto contigo cuanto antes :)</p>
-                      <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                          <label for="newsletter1" class="visually-hidden">Correo electrónico</label>
-                          <input id="newsletter1" type="text" class="form-control"
-                              placeholder="Correo electrónico">
-                          <button class="btn btn-primary" type="button">Enviar</button>
-                      </div>
-                  </form>
-              </div>
-          </div>
-
-          <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-              <p>© 2023 FiesTop. Todos los derechos reservados.</p>
-              <ul class="list-unstyled d-flex">
-                  <li class="ms-3"><a class="link-body-emphasis"
-                          href="https://www.facebook.com/people/FiesTop/100092594490737/"
-                          alt="Plataforma oficial de FiesTop en Facebook">
-                          <i class="bi bi-facebook" style="font-size: 1.5rem;"></i></a></li>
-
-                  <li class="ms-3">
-                      <p>Tel. 449 123 4567</p>
-                  </li>
-              </ul>
-          </div>
-      </footer>
-  </div>
-
+    <br>
     <!-- Scripts de Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -423,6 +365,77 @@
         }
 
     </script>
+
+    <!-- Footer Contact-->
+    <div class="divider"></div>
+    <div class="container">
+        <footer class="py-5">
+            <div class="row">
+                <div class="col-6 col-md-2 mb-3">
+                    <h5>Links</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Inicio</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Productos</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Lista de
+                                Deseos</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Carrito</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Perfil</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-6 col-md-2 mb-3">
+                    <h5>Sobre FiesTop</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Quiénes
+                                somos</a></li>
+                        <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-body-secondary">Preguntas
+                                Frecuentes</a></li>
+                    </ul>
+                </div>
+
+                <script>
+                    function mensajeEnviado() {
+                        var mensajeError = document.getElementById("success-email");
+                        mensajeError.innerHTML = '<p class="text-success">¡Gracias por interesarte en FiesTop! Nos pondremos en contacto contigo.</p>';
+                        setTimeout(function () {
+                            mensajeError.innerHTML = '';
+                        }, 2000);
+                    }
+                </script>
+                <div class="col-md-5 offset-md-1 mb-3">
+                    <form>
+                        <h5>¿Quieres contactarnos?</h5>
+                        <p>Escribe tu correo y nos pondremos en contacto contigo cuanto antes :)</p>
+                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                            <label for="newsletter1" class="visually-hidden">Correo electrónico</label>
+                            <input id="newsletter1" type="email" class="form-control" placeholder="Correo electrónico">
+                            <button onclick="mensajeEnviado()" class="btn btn-primary" type="button">Enviar</button>
+                        </div>
+                        <div id="success-email"></div>
+                    </form>
+                </div>
+            </div>
+
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                <p>© 2023 FiesTop. Todos los derechos reservados.</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a class="link-body-emphasis"
+                            href="https://www.facebook.com/people/FiesTop/100092594490737/"
+                            alt="Plataforma oficial de FiesTop en Facebook">
+                            <i class="bi bi-facebook" style="font-size: 1.5rem;"></i></a></li>
+
+                    <li class="ms-3">
+                        <p>Tel. 449 123 4567</p>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
